# buscador-marca

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  setup-windows-gpu.bat
backend/: .env.example  Dockerfile  OCR_INTEGRATION.md  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  documents.py  health.py
backend/app/models/: __init__.py  brand_detection.py  document.py  processing_status.py
backend/app/services/: __init__.py  brand_detection_service.py  excel_service.py  firebase_service.py  ocr_service.py  pdf_service.py  processing_service.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DocumentDetail.tsx  DocumentList.tsx  DocumentUpload.tsx
frontend/src/hooks/: useDocuments.ts
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
